--- a/wk3-day1-exercise/card1-demo.html
+++ b/wk3-day1-exercise/card1-demo.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="bs-example">
-        <div style="width: 300px;">
-            <img src="images/sample.png" alt="...">
-            <div class="text-center">
-                <h5>Jessica Liddel</h5>
-                <p>Jessica specialized in Front End Development.</p>                
-                <a href="#" class="btn btn-primary stretched-link">View Profile</a>
+        <div class="card" style="width: 300px;">
+            <img src="images/sample.png" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h5 class="card-title">Jessica Liddel</h5>
+                <p class="card-text">Jessica specialized in Front End Development.</p>                
+                <a href="#" class="btn btn-primary">View Profile</a>
             </div>
         </div>
     </div>
