--- a/wk3-day1-exercise/forms1-demo.html
+++ b/wk3-day1-exercise/forms1-demo.html
@@ -22,7 +22,7 @@
                 <label for="inputEmail">Email</label>
                 <input 
                     type="email" 
-                    class="" 
+                    class="form-control" 
                     id="inputEmail" 
                     placeholder="Email" 
                     required>
@@ -31,14 +31,14 @@
                 <label for="inputPassword">Password</label>
                 <input 
                     type="password" 
-                    class="" 
+                    class="form-control" 
                     id="inputPassword" 
                     placeholder="Password" 
                     required>
             </div>
             <div class="form-group">
                 <label class="form-check-label">
-                <input type="checkbox"> Remember me</label>
+                <input type="checkbox" class="form-check-input"> Remember me</label>
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
