--- a/wk3-day1-exercise/table1-demo.html
+++ b/wk3-day1-exercise/table1-demo.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="bs-example">
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Row</th>
