--- a/wk3-day1-exercise/media_objects.html
+++ b/wk3-day1-exercise/media_objects.html
@@ -20,7 +20,7 @@
 <body>
     <div class="bs-example">
         <div class="">
-            <img src="images/avatar.svg" class="" alt="Sample Image">
+            <img src="images/avatar.svg" class="mr-3" alt="Sample Image">
             <div class="">
                 <h5 class="mt-0">Jhon Carter <small><i>Posted on August 9, 2021</i></small></h5>
                 <p>Excellent feature! I love it. One day I'm definitely going to put this Bootstrap component into use and I'll let you know once I do.</p>
@@ -32,7 +32,7 @@
                 <h5 class="mt-0">Jhon Carter <small><i>Posted on August 9, 2021</i></small></h5>
                 <p>Excellent feature! I love it. One day I'm definitely going to put this Bootstrap component into use and I'll let you know once I do.</p>
             </div>
-            <img src="images/avatar.svg" class="" alt="Sample Image">
+            <img src="images/avatar.svg" class="ml-3" alt="Sample Image">
         </div>
     </div>
 
